Sin cruces ni Limpiar todo para usuarios

--- a/templates/login.html
+++ b/templates/login.html
@@ -281,7 +281,9 @@
         <div class="features">
             <div class="feature-item">
                 <span class="feature-icon">🔍</span>
-                <span>Compara precios en tiempo real</span>
+                <span>Compara precios en tiempo real de todos los distribuidores
+                    100% GRATIS
+                </span>
             </div>
 
         </div>
